Example with Optional when the list is empty.