@@ -17,6 +17,14 @@ public class StreamReduceExample {
     public static int performMultiplication(List<Integer> integerList){
 
         return integerList.stream()
+                // 1
+                // 3
+                // 5
+                // 7
+                // a=1, b=1 (from stream) => result 1 is returned
+                // a=1, b=3 (from stream) => result 3 is returned
+                // a=3, b=5 (from stream) => result 15 is returned
+                // a=15, b=7 (from stream) => result 105 is returned
                 .reduce(1, (a,b) -> a*b);
 
     }
@@ -32,14 +40,13 @@ public class StreamReduceExample {
         return StudentDataBase.getAllStudents().stream()
                 .map(Student::getName)
                 .distinct()
-                .reduce("",(a,b) -> a.concat(b));  // performs multiplication for each element in the stream.
+                .reduce("", String::concat);  // performs multiplication for each element in the stream.
     }
 
     public static Optional<Student> getHighestGradeStudent(){
 
-        Optional<Student> studentOptional =  StudentDataBase.getAllStudents().stream()
+        return StudentDataBase.getAllStudents().stream()
                 .reduce((s1,s2)->(s1.getGpa()>s2.getGpa()) ? s1 : s2);
-        return studentOptional;
     }
 
 
@@ -47,11 +54,12 @@ public class StreamReduceExample {
 
     public static void main(String[] args) {
 
-        List<Integer> integerList = Arrays.asList(1,3,5,7);
-        //List<Integer> integerList = Arrays.asList();
+        List<Integer> integerList = List.of(1,3,5,7);
+        List<Integer> integerList1 = List.of();
 
         System.out.println("Result is : " + performMultiplication(integerList));
         Optional<Integer> result = performMultiplicationWithNoInitialValue(integerList);
+        System.out.println(result.isPresent());
 
         if(result.isPresent()){
             System.out.println("Result is : " +result.get());
@@ -59,7 +67,18 @@ public class StreamReduceExample {
             System.out.println("Result is : " +0);
         }
 
+        System.out.println("Result is : " + performMultiplication(integerList1));
+        Optional<Integer> result1 = performMultiplicationWithNoInitialValue(integerList1);
+
+        System.out.println(result1.isPresent());
+        if(result1.isPresent()){
+            System.out.println("Result is : " +result1.get());
+        }else{
+            System.out.println("Result is : " +0);
+        }
+
+
         System.out.println(combineStudentNames());
-        System.out.println(getHighestGradeStudent().get());
+        System.out.println(getHighestGradeStudent().isPresent()?getHighestGradeStudent().get():null);
     }
 }
